--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+html
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+footer {
+  margin-left: 10px;
+  margin-top: auto;
+  float: right;
+}
